compiler/stage/7/err.txt
user_Solution.cpp:10:5: error: use of undeclared identifier 'hasil'; did you mean 'hasilx'?
    hasil = satu + dua;
    ^~~~~
    hasilx
user_Solution.cpp:6:9: note: 'hasilx' declared here
    int hasilx;
        ^
user_Solution.cpp:12:13: error: use of undeclared identifier 'hasil'; did you mean 'hasilx'?
    cout << hasil;
            ^~~~~
            hasilx
user_Solution.cpp:6:9: note: 'hasilx' declared here
    int hasilx;
        ^
2 errors generated.
